<resources>
    <string name="app_name">Gwent</string>
    <string name="app_description">An app enabling you to play the Gwent card game from The Witcher 3 with analog cards.</string>
    <string name="faction_monster">Monsters</string>
    <string name="faction_nilfgaard">Nilfgaardian Empire</string>
    <string name="faction_northern_kingdoms">Northern Kingdoms</string>
    <string name="faction_scoiatael" translatable="false">Scoia\'tael</string>
    <string name="popUp_cards_add">Add card</string>
    <string name="popUp_cards_save">Save</string>
    <string name="popUp_add_card_label_epic" translatable="false">Status</string>
    <string name="add_picker_epic_normal" translatable="false">Normal</string>
    <string name="add_picker_epic_epic">Hero</string>
    <string name="popUp_add_card_label_dmg">Strength</string>
    <string name="popUp_add_card_label_ability">Ability</string>
    <string name="add_picker_ability_default">None</string>
    <string name="add_picker_ability_moralBoost">Morale boost</string>
    <string name="add_picker_ability_horn" translatable="false">Horn</string>
    <string name="add_picker_ability_revenge">Avenger</string>
    <string name="add_picker_ability_binding">Tight bond</string>
    <string name="popUp_add_card_label_binding">Squad</string>
    <string name="popUp_add_card_label_number">Number</string>
    <string name="popUp_add_card_binding_count">Number of units in squad %1$d: %2$d</string>
    <string name="popUp_coin_normal_win">You begin.</string>
    <string name="popUp_coin_normal_lose">Your opponent begins.</string>
    <string name="popUp_coin_terry_1">Terry Jeffords folded your coin!</string>
    <string name="popUp_coin_terry_2" translatable="false">Oh my god! Did you just fold my quarter in half?</string>
    <string name="popUp_coin_terry_3" translatable="false">Fate\'s a bitch—you make the choice!</string>
    <string name="popUp_coin_stewie_1">Chris Griffin ate your coin!</string>
    <string name="popUp_coin_stewie_2" translatable="false">But don\'t worry, it will come out of my body sooner or later!</string>
    <string name="popUp_coin_stewie_3" translatable="false">He\'s right. I ate a dime once.</string>
    <string name="popUp_coin_stewie_4" translatable="false">It became a manhole cover for like three days—but then pow!</string>
    <string name="popUp_coin_vin">Vin burned steel and pushed away your coin!</string>
    <string name="unit_toString">%1$s %2$s (%3$d) with %4$s ability %5$s</string>
    <string name="unit_toString_melee">Close combat</string>
    <string name="unit_toString_range">Ranged combat</string>
    <string name="unit_toString_siege">Siege combat</string>
    <string name="unit_toString_epic">hero</string>
    <string name="unit_toString_unit">unit</string>
    <string name="unit_toString_ability_none">no</string>
    <string name="unit_toString_squad">(%1$d)</string>
    <string name="unit_collection_toString_accumulation_symbol" translatable="false">%1$s, %2$s</string>
    <string name="unit_collection_toString_accumulation_word">%1$s, and %2$s</string>
    <string name="alertDialog_cancel">Cancel</string>
    <string name="alertDialog_burn_title">Scorch</string>
    <string name="alertDialog_burn_positive">Scorch</string>
    <string name="alertDialog_burn_negative">Don\'t scorch</string>
    <string name="alertDialog_burn_msg">Do you really want to scorch %1$s?</string>
    <string name="alertDialog_reset_title">Reset board</string>
    <string name="alertDialog_reset_msg_default">Do you really want to reset the board?</string>
    <string name="alertDialog_reset_msg_faction_switch">You activated \"Reset on change of faction\". Do you really want to reset the board?</string>
    <string name="alertDialog_reset_checkbox">Activate perk of monster faction (you keep one random unit)</string>
    <string name="alertDialog_factionreset_monster_toast_keep">You keep: %1$s</string>
    <string name="alertDialog_reset_positive">Reset</string>
    <string name="alertDialog_reset_negative">Don\'t reset</string>
    <string name="alertDialog_revenge_title">Avenger ability</string>
    <string name="alertDialog_revenge_msg">You removed units that can summon an avenger. Do you want to activate their ability?</string>
    <string name="alertDialog_revenge_positive">Summon avenger</string>
    <string name="alertDialog_revenge_negative">Don\'t activate</string>
    <string name="array_design_default">Default</string>
    <string name="array_design_geralt">Geralt of Rivia</string>
    <string name="array_design_ciri" translatable="false">Cirilla</string>
    <string name="array_design_jaskier">Dandelion</string>
    <string name="array_design_yennefer">Yennefer of Vengerberg</string>
    <string name="array_design_eredin" translatable="false">Eredin Bréacc Glas</string>
    <string name="preference_design">Background</string>
    <string name="preference_warnings_title">Warnings</string>
    <string name="preference_warnings_desc">Determines if warnings are shown before you can reset the board.</string>
    <string name="preference_faction_reset_title">"Reset on change of faction"</string>
    <string name="preference_faction_reset_desc">Determines if the board is reset on change of faction.</string>
    <string name="preference_sounds_header">Sounds</string>
    <string name="preference_sounds_category">Events</string>
    <string name="preference_sounds_cards_new">New unit</string>
    <string name="preference_sounds_cards_delete">Unit removed</string>
    <string name="preference_sounds_weather">Change of weather</string>
    <string name="preference_sounds_horn">Commander\'s horn</string>
    <string name="preference_sounds_burn">Scorch</string>
    <string name="preference_sounds_coin">Coin-flip</string>
    <string name="preference_info_category_header" translatable="false">Info</string>
    <string name="preference_info_onboardingSupport">Introduction</string>
    <string name="preference_rules_header">Rules</string>
    <string name="preference_rules_general_title">General</string>
    <string name="preference_rules_course_title">Gameplay</string>
    <string name="preference_rules_factions_title">Factions</string>
    <string name="preference_rules_commander_title">Leaders</string>
    <string name="preference_rules_cards_title">Deck and playboard</string>
    <string name="preference_rules_card_abilities_title">Card abilities</string>
    <string name="preference_rules_special_cards_title">Special cards</string>
    <string name="preference_rules_general_key" translatable="false">rules_general</string>
    <string name="preference_rules_course_key" translatable="false">rules_course</string>
    <string name="preference_rules_factions_key" translatable="false">rules_factions</string>
    <string name="preference_rules_commander_key" translatable="false">rules_commander</string>
    <string name="preference_rules_cards_key" translatable="false">rules_cards</string>
    <string name="preference_rules_card_abilities_key" translatable="false">rules_card_abilities</string>
    <string name="preference_rules_special_cards_key" translatable="false">rules_special_cards</string>
    <string name="preference_first_use_key" translatable="false">firstUse</string>
    <string name="onboardingSupport_button_skip">Skip</string>
    <string name="onboardingSupport_button_finish">Finish</string>
    <string name="content_description_background_resource">background element</string>
    <string name="content_description_activity_main_background">background</string>
    <string name="content_description_activity_main_point_ball">total score</string>
    <string name="content_description_activity_main_faction_button">faction logo</string>
    <string name="content_description_activity_main_reset_button" translatable="false">Reset-Icon</string>
    <string name="content_description_activity_main_weather_button">Clear-Weather-Icon</string>
    <string name="content_description_activity_main_burn_button">Scorch-Icon</string>
    <string name="content_description_activity_main_coin_button">Coin-Icon</string>
    <string name="content_description_activity_main_settings_button">Settings-Icon</string>
    <string name="content_description_card_ability">Ability-Icon</string>
    <string name="content_description_card_delete">Delete-Icon</string>
    <string name="content_description_card_copy">Copy-Icon</string>
    <string name="content_description_coinpopup_coin">coin</string>
    <string name="content_description_coinpopup_stewie_1">Chris Griffin who raises his arms in consternation</string>
    <string name="content_description_coinpopup_stewie_2">Stewie Griffin who tells a story</string>
    <string name="content_description_coinpopup_stewie_3">Stewie Griffin who yells</string>
    <string name="content_description_coinpopup_terry_1">A bent coin lying on a table</string>
    <string name="content_description_coinpopup_terry_2">Jake Peralta (Andy Samberg) who says something in astonishment</string>
    <string name="content_description_coinpopup_terry_3">Terry Jeffords (Terry Crews) who says something angrily and Charles Boyle (Joe Lo Truglio) looking at him in terror</string>
    <string name="content_description_coinpopup_vin">A fan art showing Vin from Brandon Sanderson\'s Mistborn-series.</string>
    <string name="content_description_factionpopup_monster">Card with symbol of monster faction</string>
    <string name="content_description_factionpopup_nilfgaard">Card with symbol of nilfgaardian empire faction</string>
    <string name="content_description_factionpopup_northern_kingdoms">Card with symbol of Northern Kingdoms faction</string>
    <string name="content_description_factionpopup_scoiatael">Card with symbol of Scoia\'tael faction</string>
    <string name="content_description_row_pointball">point display of combat row</string>
    <string name="content_description_row_weather">weather display of combat row</string>
    <string name="content_description_row_horn">horn display of combat row</string>
    <string name="content_description_row_card">card display of combat row</string>
    <string name="content_description_onboardingSupport_image">screenshots of this app</string>
    <string name="content_description_onboardingSupport_indicator">dot that indicates progress</string>
    <string name="content_description_onboardingSupport_next">forward arrow</string>
    <string name="rules_general_text"><![CDATA[<p>Gwent is an old card game especially fancied by dwarfs. It represents the confrontation of two opposing armies. The players are generals and cards represent their units. Every player uses his own unique deck of cards. Decks can be created for each of the four factions: Monsters, Nilfgaardian Empire, Northern Kingdoms and Scoia\'tael. Each faction has unique cards which lead to different play styles. Moreover, there are cards that can be used for every faction. Your goal is to win two rounds out of three by having more strength than your opponent.</p>]]></string>
</resources>