<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/rectangle_add_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="@dimen/popUp_coin_window_max_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/imageLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/textLayout"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_coinpopup_stewie_1"
                android:src="@drawable/stewie_1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_coinpopup_stewie_2"
                android:src="@drawable/stewie_2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_coinpopup_stewie_3"
                android:src="@drawable/stewie_3" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageLayout"
            app:layout_constraintWidth_max="@dimen/popUp_coin_textview_max_width">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/border_margin"
                android:gravity="center"
                android:text="@string/popUp_coin_stewie_1"
                android:textColor="@color/color_coin_text"
                android:textSize="@dimen/popUp_coin_title_textSize"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/border_margin"
                android:gravity="center"
                android:text="@string/popUp_coin_stewie_2"
                android:textColor="@color/color_coin_text"
                android:textSize="@dimen/popUp_coin_dialog_textSize"
                app:layout_constraintTop_toBottomOf="@id/text1" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/border_margin"
                android:gravity="center"
                android:text="@string/popUp_coin_stewie_3"
                android:textColor="@color/color_coin_text"
                android:textSize="@dimen/popUp_coin_dialog_textSize"
                app:layout_constraintBottom_toTopOf="@id/text4"
                app:layout_constraintTop_toBottomOf="@id/text2" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/border_margin"
                android:gravity="center"
                android:text="@string/popUp_coin_stewie_4"
                android:textColor="@color/color_coin_text"
                android:textSize="@dimen/popUp_coin_dialog_textSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
