<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/factionBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/monsterCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/border_margin"
        android:contentDescription="@string/content_description_factionpopup_monster"
        android:src="@drawable/card_monster"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/monsterButton"
        app:layout_constraintStart_toStartOf="@id/monsterButton" />

    <Button
        android:id="@+id/monsterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/popUp_faction_margin"
        android:background="@drawable/rectangle_monster"
        android:gravity="center"
        android:text="@string/faction_monster"
        android:textAllCaps="false"
        android:textColor="@color/color_text_monster"
        android:textSize="@dimen/rectangle_textSize"
        app:layout_constraintEnd_toStartOf="@id/nilfgaardButton"
        app:layout_constraintHeight_min="@dimen/rectangle_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monsterCardView"
        app:layout_constraintWidth_max="@dimen/popUp_faction_button_max_width" />

    <ImageView
        android:id="@+id/nilfgaardCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/border_margin"
        android:contentDescription="@string/content_description_factionpopup_nilfgaard"
        android:src="@drawable/card_nilfgaard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/nilfgaardButton"
        app:layout_constraintStart_toStartOf="@id/nilfgaardButton" />

    <Button
        android:id="@+id/nilfgaardButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/popUp_faction_margin"
        android:background="@drawable/rectangle_nilfgaard"
        android:gravity="center"
        android:text="@string/faction_nilfgaard"
        android:textAllCaps="false"
        android:textColor="@color/color_text_nilfgaard"
        android:textSize="@dimen/rectangle_textSize"
        app:layout_constraintEnd_toStartOf="@id/northernKingdomsButton"
        app:layout_constraintHeight_min="@dimen/rectangle_height"
        app:layout_constraintStart_toEndOf="@id/monsterButton"
        app:layout_constraintTop_toBottomOf="@id/nilfgaardCardView"
        app:layout_constraintWidth_max="@dimen/popUp_faction_button_max_width" />

    <ImageView
        android:id="@+id/northernKingdomsCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/border_margin"
        android:contentDescription="@string/content_description_factionpopup_northern_kingdoms"
        android:src="@drawable/card_northern_kingdoms"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/northernKingdomsButton"
        app:layout_constraintStart_toStartOf="@id/northernKingdomsButton" />

    <Button
        android:id="@+id/northernKingdomsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/popUp_faction_margin"
        android:background="@drawable/rectangle_northern_kingdoms"
        android:gravity="center"
        android:text="@string/faction_northern_kingdoms"
        android:textAllCaps="false"
        android:textColor="@color/color_text_northern_kingdoms"
        android:textSize="@dimen/rectangle_textSize"
        app:layout_constraintEnd_toStartOf="@id/scoiataelButton"
        app:layout_constraintHeight_min="@dimen/rectangle_height"
        app:layout_constraintStart_toEndOf="@id/nilfgaardButton"
        app:layout_constraintTop_toBottomOf="@id/northernKingdomsCardView"
        app:layout_constraintWidth_max="@dimen/popUp_faction_button_max_width" />

    <ImageView
        android:id="@+id/scoiataelCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/border_margin"
        android:contentDescription="@string/content_description_factionpopup_scoiatael"
        android:src="@drawable/card_scoiatael"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/scoiataelButton"
        app:layout_constraintStart_toStartOf="@id/scoiataelButton" />

    <Button
        android:id="@+id/scoiataelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/popUp_faction_margin"
        android:background="@drawable/rectangle_scoiatael"
        android:gravity="center"
        android:text="@string/faction_scoiatael"
        android:textAllCaps="false"
        android:textColor="@color/color_text_scoiatael"
        android:textSize="@dimen/rectangle_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="@dimen/rectangle_height"
        app:layout_constraintStart_toEndOf="@id/northernKingdomsButton"
        app:layout_constraintTop_toBottomOf="@id/scoiataelCardView"
        app:layout_constraintWidth_max="@dimen/popUp_faction_button_max_width" />
</androidx.constraintlayout.widget.ConstraintLayout>
